--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -27,6 +27,7 @@
 #
 #
 
+
 on early-init
     # Disable EAS
     write /proc/sys/kernel/sched_energy_aware 0
@@ -312,3 +313,9 @@ on property:sys.boot_completed=1
 # Workaround for camera HAL can not read sys property
 on property:sys.camera.face.unlock=*
     setprop vendor.camera.face.unlock ${sys.camera.face.unlock}
+
+on boot
+
+    chown system system /sys/class/power_supply/battery/input_suspend
+    chmod 0666 /sys/class/power_supply/battery/input_suspend
+
