--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -301,10 +301,11 @@ on charger
     setprop sys.usb.configfs 1
     start vendor.power_off_alarm
 
-service vendor.hvdcp_opti /system/vendor/bin/hvdcp_opti
+service vendor.hvdcp_opti /vendor/bin/hvdcp_opti
      class main
-     user root
+     user system
      group system wakelock
+     capabilities BLOCK_SUSPEND WAKE_ALARM
 
 # Workaround for camera HAL can not read sys property
 on property:sys.camera.face.unlock=*
