tulip: Fix smart-charging

--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -189,10 +189,11 @@ on boot
 
     # Touchpanel
     chown system system /sys/touchpanel/double_tap
-
     chmod 0664 /sys/touchpanel/capacitive_keys
     chmod 0664 /sys/touchpanel/double_tap
     chmod 0664 /sys/touchpanel/reversed_keys
+
+    
 
 #Peripheral manager
 service vendor.per_mgr /system/vendor/bin/pm-service
@@ -315,7 +316,7 @@ on property:sys.camera.face.unlock=*
     setprop vendor.camera.face.unlock ${sys.camera.face.unlock}
 
 on boot
-
-    chown system system /sys/class/power_supply/battery/input_suspend
-    chmod 0666 /sys/class/power_supply/battery/input_suspend
+    # SmartCharging
+    chown system system /sys/class/power_supply/battery/charging_enabled
+    chmod 0666 /sys/class/power_supply/battery/charging_enabled
 
